--- a/src/index.css
+++ b/src/index.css
@@ -1,136 +1,15 @@
 @import-normalize; /* bring in normalize.css styles */
 
-/* GENERAL STYLES */
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-  margin: 0;
-  font-weight: 600;
-}
-
-p {
-  margin-top: 0;
-  margin-bottom: 0.5em;
-}
-
-ul {
-  margin: 0;
-  padding: 0;
-  list-style: none;
-}
-
-a {
-  color: var(--colorTextDark);
-  text-decoration: none;
-  transition: color var(--cubic-transition);
-}
-
-a:hover,
-a:focus {
-  color: var(--colorPrimary);
-}
-
-button {
-  cursor: pointer;
-  border: none;
-  background-color: transparent;
-  padding: 0;
-  font-size: 16px;
-}
-
-img {
-  display: block;
-  max-width: 100%;
-  height: auto;
-  object-fit: cover;
-}
-
-hr {
-  border-top: 1px solid var(--colorBorder);
-}
-
-th,
-td {
-  padding: 10px 20px;
-  text-align: left;
-}
-
-tr:nth-child(even) {
-  background-color: var(--colorSecondary);
-}
-
-th {
-  background-color: var(--colorPrimary);
-  color: var(--white);
-  text-transform: uppercase;
-}
-
-input:focus,
-textarea:focus {
-  outline: 1px solid var(--colorPrimary);
-}
-
 body {
-  font-family: var(--font-primary);
-  font-size: 16px;
-  line-height: 1.2;
-  font-weight: 400;
-  color: var(--black);
-  background-color: var(--colorBody);
   margin: 0;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+    sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
 
-#root {
-  margin: 20px;
-}
-
-.btn {
-  padding: 8px 15px;
-  border-radius: 5px;
-}
-
-.btn.btn-primary {
-  background-color: var(--colorPrimary);
-  color: var(--white);
-  transition: box-shadow var(--cubic-transition), color var(--cubic-transition);
-}
-
-.btn.btn-primary:hover,
-.btn.btn-primary:focus {
-  box-shadow: rgba(0, 0, 0, 0.48) 0 4px 12px;
-}
-
-:root {
-  /* 
-  ================
-  COLORS 
-  ================
-  */
-  --white: #ffffff;
-  --black: #000000;
-
-  --colorPrimary: #6200ee;
-  --colorSecondary: #303030;
-  --colorText: #141414;
-  --colorBody: #eaedee;
-
-  --colorBorder: rgb(65 64 64 / 20%);
-
-  /* 
-  ==============
-  FONTS
-  ==============
-  */
-  --font-primary: Inter, sans-serif;
-
-  /*
-  ===========
-  OTHER
-  ===========
-  */
-
-  --cubic-transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+code {
+  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+    monospace;
 }
